--- a/MemoryLick/MemoryLick.csproj
+++ b/MemoryLick/MemoryLick.csproj
@@ -2,6 +2,11 @@
 
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <Title>MemoryLick</Title>
+        <Authors>Christopher McMorran</Authors>
+        <Description>A NuGet package for reading and writing memory from other processes.</Description>
+        <RepositoryUrl>https://github.com/chrismcmorran/MemoryLick</RepositoryUrl>
     </PropertyGroup>
 
 </Project>
