Convert to .NET Standard.

--- a/MemoryLick/MemoryLick.csproj
+++ b/MemoryLick/MemoryLick.csproj
@@ -1,13 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net5.0</TargetFramework>
+        <TargetFramework>netstandard2.0</TargetFramework>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <Title>MemoryLick</Title>
         <Authors>Christopher McMorran</Authors>
         <Description>A NuGet package for reading and writing memory from other processes.</Description>
         <RepositoryUrl>https://github.com/chrismcmorran/MemoryLick</RepositoryUrl>
-        <PackageVersion>1.0.1</PackageVersion>
+        <PackageVersion>1.0.2</PackageVersion>
     </PropertyGroup>
 
 </Project>
